--- a/style.css
+++ b/style.css
@@ -262,15 +262,16 @@ body {
   border-bottom: 1px solid #212121;
 }
 
-.projects {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+#cards-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
   align-items: center;
+  justify-content: center;
   gap: 24px;
 }
 
-.stories-item {
+.main-card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -279,19 +280,18 @@ body {
   transition: transform 0.3s ease-in-out;
 }
 
-.stories-item:hover {
+.main-card:hover {
   transform: scale(1.08);
 }
 
-.img-placeholder {
-  height: 80%;
+.card-img {
+  width: 100%;
+  height: 100%;
 }
 
-.right.block1 {
+.right-block1 {
   display: flex;
   flex-direction: column;
-  min-width: 327px;
-  min-height: 307px;
   width: 100%;
 }
 
@@ -310,8 +310,7 @@ body {
 }
 
 .right-block1-description {
-  width: 327px;
-  height: 147px;
+  max-width: 327px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -319,6 +318,7 @@ body {
   line-height: 24px;
   color: var(--blue-like);
   margin-bottom: 12px;
+  display: flex;
 }
 
 .lang1 {
@@ -370,19 +370,10 @@ button:disabled {
   background: #f4f1f0;
 }
 
-.cards-grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  align-items: center;
-  justify-content: center;
-  gap: 24px;
-}
-
 .card {
   position: relative;
   width: 327px;
-  height: 390px;
+  height: 386px;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -682,17 +673,21 @@ footer {
     padding: 130px 24px;
   }
 
+  .img-placeholder {
+    min-width: 60%;
+  }
+
   .work-section-heading {
     flex-direction: row;
     align-items: center;
   }
 
-  .stories-item {
+  .main-card {
     flex-direction: row;
     align-items: flex-start;
   }
 
-  .cards-grid {
+  #cards-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -787,20 +782,15 @@ footer {
     grid-template-rows: 1fr;
   }
 
-  .cards-grid {
+  #cards-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
   }
 
-  .stories-item {
+  .main-card {
     width: 1029px;
     height: 448px;
-  }
-
-  .img-placeholder {
-    width: 684px;
-    height: 100%;
   }
 
   #about-me-section {
