--- a/style.css
+++ b/style.css
@@ -885,7 +885,8 @@ footer {
   .modal-img {
     min-width: 100%;
     height: 100%;
-    max-height: 448px;
+    max-height: 500px;
+    object-fit: cover;
   }
 
   .modal-body {
