--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100vh;
 }
 
 .headline {
@@ -942,7 +943,7 @@ footer {
 
   .background {
     background-image: url("default/SVG/Illustration-header.svg");
-    background-position: right -63px;
+    background-position: right top;
   }
 
   .divider {
